Cambios en gateway y agregar controllers a la api

--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -8,10 +8,10 @@
 		<version>3.3.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.ivansalinasss</groupId>
-	<artifactId>minimercado-gateway</artifactId>
+	<groupId>com.ivansalinasss.minimercado</groupId>
+	<artifactId>gateway</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>minimercado-gateway</name>
+	<name>gateway</name>
 	<description>API Gateway para minimercado</description>
 	<url/>
 	<licenses>
@@ -33,8 +33,9 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-gateway-mvc</artifactId>
+			<artifactId>spring-cloud-starter-gateway</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
