--- a/minimercado-gateway/src/main/resources/application.yml
+++ b/minimercado-gateway/src/main/resources/application.yml
@@ -4,7 +4,6 @@ server:
 spring:
   application:
     name: minimercado-gateway
-
   cloud:
     gateway:
       routes:
@@ -13,10 +12,4 @@ spring:
           predicates:
             - Path=/api/productos/**  # Ruta que el gateway redirigirá
           filters:
-            - RewritePath=/example/(?<path>.*), /$\{path}  # Filtra la URL
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: '*'
+            - RewritePath=/api/productos/(?<segment>.*), /productos/${segment}
