API genera datos al iniciar el servidor

--- a/minimercado-servicio-productos/src/main/resources/application.properties
+++ b/minimercado-servicio-productos/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.data.mongodb.password=puntos
 spring.data.mongodb.database=minimercado
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
+spring.data.mongodb.auto-index-creation=true
+
+spring.profiles.active=dev
