--- a/web/minimercado-front/package.json
+++ b/web/minimercado-front/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "node": "^20.15.0",
     "npm": "^10.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.2.2",
     "web-vitals": "^2.1.4"
