--- a/network/compose.yaml
+++ b/network/compose.yaml
@@ -41,6 +41,18 @@ services:
     networks:
       - minimercado
 
+  web:
+    container_name: minimercado-web
+    build:
+      context: ../web/minimercado-front
+      args:
+        REACT_APP_API_URL: $REACT_APP_API_URL
+    restart: always
+    ports:
+      - 3000:3000
+    networks:
+      - minimercado
+
 volumes:
   minimercado:
 
