--- a/minimercado-servicio-productos/Dockerfile
+++ b/minimercado-servicio-productos/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:21
 ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+COPY ${JAR_FILE} /app/app.jar
+ENTRYPOINT ["java", "-jar", "/app/app.jar"]
